--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# ignore the MPS folder created by TFIM_example.ipynb
+# ignore the MPS folder created by TFIM_guide.ipynb
 
 MPS/
 
 CONT/
-
-dev/
 
 OUT/
 
